kubernetes/apps/kyverno/policy-reporter/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter-ui
  namespace: kyverno
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - ["policy-reporter.${SECRET_DOMAIN}"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: policy-reporter-ui
          port: 8080
